settings: Fix upgrade-banner for narrow width screens.
The upgrade banner was being clipped for narrow width screens
and was only partially visible. This commit changes it to instead
wrap the content such that complete content is visible on the
screen.

We also decrease the right margin for icon in the banner such
that the text of the banner fits in one line for at least normal
screen size and zoom in stream settings overlay.

--- a/static/styles/app_components.css
+++ b/static/styles/app_components.css
@@ -523,10 +523,11 @@ div.overlay {
 
 .upgrade-tip,
 .upgrade-or-sponsorship-tip {
-    width: max-content;
+    width: fit-content;
 
     &::before {
         content: "\f135";
+        margin-right: 6px;
     }
 }
 
@@ -554,7 +555,6 @@ div.overlay {
 
     &::before {
         display: inline;
-        margin-right: 8px;
 
         font-family: FontAwesome;
         font-weight: 600;
@@ -563,6 +563,7 @@ div.overlay {
 
 .tip::before {
     content: "\f0a2";
+    margin-right: 8px;
 }
 
 /* We are mostly consistent in how we style
